# MobileCommentGenerator

./: .env.example  .env.shared  .gitignore  ARCHITECTURE.md  Chiten.csv  EFFICIENCY_REPORT.md  FRONTEND_SEPARATION_COMPLETE.md  Makefile  QUICK_SETUP.md  README.md  README_EN.md  README_FRONTEND_INTEGRATION.md  api_server.py  app.py  cursortest.txt  debug_csv_reading.py  enhanced_comment_generator.py  geminitest.py  mypy.ini  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-streamlit.txt  requirements.txt  restart_app.sh  run_streamlit.sh  setup.sh  start_api.sh  test.py  test_all_locations.py  test_connections.py  test_final_safety_check.py  test_precipitation_fix.py  test_rain_comment_fix_integration.py  test_rain_improved.py  test_rain_selection.py  test_rainy_weather_contradiction_fix.py  (+11 more)
.github/workflows/: claude.yml  ui-tests.yml
.streamlit/: config.toml
config/: expression_rules.yaml  llm_config.yaml  ng_words.yaml  weather_thresholds.yaml
data/: generation_history.json
data/forecast_cache/: forecast_cache_さいたま.csv  forecast_cache_みなかみ.csv  forecast_cache_むつ.csv  forecast_cache_与那国島.csv  forecast_cache_中津.csv  forecast_cache_久米島.csv  forecast_cache_人吉.csv  forecast_cache_伊万里.csv  forecast_cache_佐世保.csv  forecast_cache_佐伯.csv  forecast_cache_佐賀.csv  forecast_cache_八丈島.csv  forecast_cache_八幡.csv  forecast_cache_函館.csv  forecast_cache_前橋.csv  forecast_cache_千葉.csv  forecast_cache_名護.csv  forecast_cache_土浦.csv  forecast_cache_大分.csv  forecast_cache_大島.csv  forecast_cache_大東島.csv  forecast_cache_大田原.csv  forecast_cache_大阪.csv  forecast_cache_宇都宮.csv  forecast_cache_宮古島.csv  forecast_cache_宮崎.csv  forecast_cache_小田原.csv  forecast_cache_延岡.csv  forecast_cache_東京.csv  forecast_cache_横浜.csv  forecast_cache_水戸.csv  forecast_cache_熊本.csv  forecast_cache_熊谷.csv  forecast_cache_父島.csv  forecast_cache_石垣島.csv  forecast_cache_神戸.csv  forecast_cache_福岡.csv  forecast_cache_秩父.csv  forecast_cache_稚内.csv  forecast_cache_那覇.csv  (+4 more)
data/forecast_cache_test/: forecast_cache_テスト地点.csv
docs/: issue_2_checklist.md  llm_integration.md  location_manager_README.md  s3_comment_retrieval.md  streamlit_guide.md  weather_integration.md
examples/: README.md  location_manager_demo.py  weather_integration_samples.py  workflow_integration_demo.py
frontend/: .env.example  README.md  nuxt.config.ts  package.json  start_frontend.sh  uno.config.ts
frontend/components/: .gitkeep  GenerateSettings.vue  GeneratedComment.vue  LocationSelection.vue  WeatherData.vue
frontend/composables/: .gitkeep  useApi.ts
frontend/constants/: .gitkeep  locations.ts  regions.ts
frontend/docs/: API_INTEGRATION.md  INTEGRATION_GUIDE.md  STREAMLIT_INTEGRATION.md
frontend/pages/: .gitkeep  index.vue
frontend/public/: .gitkeep  地点名.csv
frontend/server/: .gitkeep
frontend/types/: .gitkeep  index.ts
output/: 冬_advice_enhanced100.csv  冬_advice_enhanced50.csv  冬_advice_top30.csv  冬_weather_comment_enhanced100.csv  冬_weather_comment_enhanced50.csv  冬_weather_comment_top30.csv  台風_advice_enhanced100.csv  台風_advice_enhanced50.csv  台風_advice_top30.csv  台風_weather_comment_enhanced100.csv  台風_weather_comment_enhanced50.csv  台風_weather_comment_top30.csv  夏_advice_enhanced100.csv  夏_advice_enhanced50.csv  夏_advice_top30.csv  夏_weather_comment_enhanced100.csv  夏_weather_comment_enhanced50.csv  夏_weather_comment_top30.csv  春_advice_enhanced100.csv  春_advice_enhanced50.csv  春_advice_top30.csv  春_weather_comment_enhanced100.csv  春_weather_comment_enhanced50.csv  春_weather_comment_top30.csv  梅雨_advice_enhanced100.csv  梅雨_advice_enhanced50.csv  梅雨_advice_top30.csv  梅雨_weather_comment_enhanced100.csv  梅雨_weather_comment_enhanced50.csv  梅雨_weather_comment_top30.csv  秋_advice_enhanced100.csv  秋_advice_enhanced50.csv  秋_advice_top30.csv  秋_weather_comment_enhanced100.csv  秋_weather_comment_enhanced50.csv  秋_weather_comment_top30.csv
output/analysis/: 冬_advice_analysis.md  冬_weather_analysis.md  冬_weather_comment_analysis.md  台風_advice_analysis.md  台風_weather_analysis.md  台風_weather_comment_analysis.md  夏_advice_analysis.md  夏_weather_analysis.md  夏_weather_comment_analysis.md  春_advice_analysis.md  春_weather_analysis.md  春_weather_comment_analysis.md  梅雨_advice_analysis.md  梅雨_weather_analysis.md  梅雨_weather_comment_analysis.md  秋_advice_analysis.md  秋_weather_analysis.md  秋_weather_comment_analysis.md
react-version/: index.html  package.json  tailwind.config.js  vite.config.ts
react-version/src/: App.tsx  index.css  main.tsx
scripts/: run_workflow_sample.py  visualize_workflow.py
shared/: package.json  tsconfig.json  tsup.config.ts
shared/src/: index.ts
src/algorithms/: __init__.py  comment_evaluator.py  similarity_calculator.py
src/apis/: wxtech_client.py
src/config/: comment_config.py  comment_restrictions.yaml  config_loader.py  severe_weather_config.py  weather_config.py  weather_constants.py
src/data/: Chiten.csv  comment_generation_state.py  comment_pair.py  evaluation_criteria.py  forecast_cache.py  location_manager.py  past_comment.py  weather_data.py  weather_trend.py
src/exceptions/: __init__.py
src/llm/: __init__.py  llm_client.py  llm_manager.py  prompt_builder.py  prompt_templates.py
src/nodes/: comment_selector.py  evaluate_candidate_node.py  generate_comment_node.py  input_node.py  mock_nodes.py  output_node.py  retrieve_past_comments_node.py  select_comment_pair_node.py  weather_forecast_node.py
src/repositories/: local_comment_repository.py  s3_comment_repository.py
src/tool_design/: .env.example  ACCEPTANCE_CHECKLIST.md  API_INTEGRATION.md  (+10 more)
tests/: README_UI_TESTS.md  test_comment_generation_workflow.py  test_evaluate_candidate_node.py  test_generate_comment_node.py  test_llm_providers.py  test_location_manager.py  test_past_comment.py  test_retrieve_past_comments_node.py  test_s3_comment_repository.py  test_select_comment_pair_node.py  test_streamlit_app.py  test_streamlit_components.py  test_streamlit_utils.py  test_weather_comment_validator.py  test_weather_data.py  test_workflow_integration.py  test_wxtech_client.py
(+49 files in other folders)
